# mcp-staten

./: README.md  pyproject.toml
.github/workflows/: release.yml
fleur_mcp/: main.py
